# qemu

./: .clang-format  .editorconfig  .gitmodules  .require_clean_build  Jenkinsfile  MAINTAINERS  Makefile  Makefile.objs  Makefile.target  README.CHERI.md  README.md  README.rst  block.c  blockdev.c  config.sh  configure  cpu.c  cpus.c  disas.c  exec.c  gdbstub.c  hmp-commands.hx  iothread.c  meson.build  monitor.c  qemu-bridge-helper.c  qemu-log.c  qemu-nbd.c  qemu-options.hx  qemu-timer.c  qtest.c  vl.c
accel/tcg/: Makefile.objs  atomic_template.h  cpu-exec.c  cputlb.c  internal.h  log_instr.c  log_instr_cvtrace.c  log_instr_json.c  log_instr_perfetto.c  log_instr_protobuf.c  log_instr_stats.c  log_instr_text.c  meson.build  probe-access.inc.c  tcg-accel-ops.c  tcg-all.c  tcg-runtime.c  tcg-runtime.h  translate-all.c  translator.c  user-exec.c
backends/: hostmem.c  rng-random.c
block/: block-backend.c  io.c  meson.build  throttle-groups.c  throttle.c
bsd-user/: Makefile.objs  bsd-file.h  bsd-ioctl.c  bsd-ioctl.h  bsd-mem.c  bsd-mem.h  bsd-misc.c  bsd-misc.h  bsd-proc.c  bsd-proc.h  bsd-signal.h  bsd-socket.c  bsd-socket.h  bsdload.c  elfload.c  errno_defs.h  main.c  meson.build  mmap.c  qemu-bsd.h  qemu.h  safe-syscall.S  signal.c  strace.c  syscall.c  syscall_defs.h  trace-events
bsd-user/aarch64/: meson.build  target_arch.h  target_arch_cpu.c  target_arch_cpu.h  target_arch_elf.h  target_arch_param.h  target_arch_proc.h  target_arch_reg.h  target_arch_signal.h  target_arch_sigtramp.h  target_arch_sysarch.h  target_arch_thread.h  target_arch_vmparam.h  target_syscall.h
bsd-user/aarch64/cheri/: cheri_exception.c  cheri_machdep.c
bsd-user/aarch64/machine/: armreg.h  cheri.h  cherireg.h  vmparam.h
bsd-user/arm/: target_arch.h  target_arch_cpu.c  target_arch_cpu.h  target_arch_elf.h  target_arch_reg.h  target_arch_signal.h  target_arch_sigtramp.h  target_arch_sysarch.h  target_arch_thread.h  target_arch_vmparam.h  target_syscall.h
bsd-user/cheri/: cheri.h  cheri_exec.c  cheri_usercap.c  cheric.c  cheric.h  cherireg.h
bsd-user/freebsd/: host_os.h  make_syscall_nr_h.sh  os-extattr.c  os-extattr.h  os-file.h  os-flag.c  os-ioctl-cmds.h  os-ioctl-cryptodev.h  os-ioctl-disk.h  os-ioctl-filio.h  os-ioctl-in6_var.h  os-ioctl-ioccom.h  os-ioctl-sockio.h  os-ioctl-ttycom.h  os-ioctl-types.h  os-kbounce.c  os-misc.h  os-proc.c  os-proc.h  os-signal.h  os-socket.c  os-socket.h  os-stat.c  os-stat.h  os-sys.c  os-thread.c  os-thread.h  os-time.c  os-time.h  qemu-os.h  strace.list  syscall_nr.h  target_os__types.h  target_os_elf.h  target_os_errno.h  target_os_mman.h  target_os_siginfo.h  target_os_signal.h  target_os_stack.h  target_os_syscallsubr.h  (+3 more)
bsd-user/freebsd/compat/qemu/: Makefile  syscalls.conf  target_os_proto.h  target_os_sysargmap.h  target_os_syscall.h  target_os_syscalls.c  target_os_sysent.c  target_os_systrace_args.c
bsd-user/host/aarch64/: hostdep.h  safe-syscall.inc.S
bsd-user/host/arm/: hostdep.h  safe-syscall.inc.S
bsd-user/host/i386/: hostdep.h  safe-syscall.inc.S
bsd-user/host/ppc64/: hostdep.h
bsd-user/host/x86_64/: hostdep.h  safe-syscall.inc.S
bsd-user/i386/: target_arch.h  target_arch_cpu.c  target_arch_cpu.h  target_arch_elf.h  target_arch_signal.h  target_arch_sysarch.h  target_arch_thread.h  target_arch_vmparam.h  target_signal.h
bsd-user/mips/: target_arch_cpu.c  target_arch_cpu.h  target_arch_elf.h  target_arch_reg.h  target_arch_signal.h  target_arch_sigtramp.h  target_arch_sysarch.h  target_arch_thread.h  target_arch_vmparam.h
bsd-user/mips64/: target_arch.h  target_arch_cpu.c  target_arch_cpu.h  target_arch_elf.h  target_arch_reg.h  target_arch_signal.h  target_arch_sigtramp.h  target_arch_sysarch.h  target_arch_thread.h  target_arch_vmparam.h
bsd-user/netbsd/: host_os.h  os-extattr.h  os-ioctl-cmds.h  os-ioctl-filio.h  os-ioctl-ioccom.h  os-ioctl-ttycom.h  os-ioctl-types.h  os-misc.h  os-proc.h  os-socket.c  os-socket.h  os-stat.h  os-sys.c  os-thread.c  os-thread.h  os-time.c  os-time.h  qemu-os.h  target_os_elf.h  target_os_signal.h  target_os_stack.h  target_os_thread.h
bsd-user/openbsd/: host_os.h  os-extattr.h  os-ioctl-cmds.h  os-ioctl-filio.h  os-ioctl-ioccom.h  os-ioctl-ttycom.h  os-ioctl-types.h  os-misc.h  os-proc.c  os-proc.h  os-socket.c  os-socket.h  os-stat.c  os-stat.h  os-sys.c  os-thread.c  os-thread.h  os-time.c  os-time.h  qemu-os.h  target_os_elf.h  target_os_stack.h
bsd-user/ppc/: target_arch.h  target_arch_cpu.c  target_arch_cpu.h  target_arch_elf.h  target_arch_reg.h  target_arch_signal.h  target_arch_sigtramp.h  target_arch_sysarch.h  target_arch_thread.h  target_arch_vmparam.h  target_syscall.h
bsd-user/riscv/: meson.build  target_arch.h  target_arch_cpu.c  target_arch_cpu.h  target_arch_elf.h  target_arch_param.h  target_arch_proc.h  target_arch_reg.h  target_arch_signal.h  target_arch_sigtramp.h  target_arch_sysarch.h  target_arch_thread.h  target_arch_vmparam.h  target_syscall.h
bsd-user/riscv/cheri/: cheri_exception.c  cheri_machdep.c
bsd-user/riscv/machine/: cheri.h  cherireg.h  vmparam.h
bsd-user/sparc/: target_arch.h  target_arch_cpu.c  target_arch_cpu.h  target_arch_elf.h  target_arch_reg.h  target_arch_signal.h  target_arch_sysarch.h  target_arch_thread.h  target_arch_vmparam.h
bsd-user/sparc64/: target_arch.h  target_arch_cpu.c  target_arch_cpu.h  target_arch_elf.h  target_arch_reg.h  target_arch_signal.h  target_arch_sigtramp.h  target_arch_sysarch.h  target_arch_thread.h  target_arch_vmparam.h  target_signal.h
bsd-user/x86_64/: target_arch.h  target_arch_cpu.c  target_arch_cpu.h  target_arch_elf.h  target_arch_signal.h  target_arch_sysarch.h  target_arch_vmparam.h
fsdev/: file-op-9p.h  meson.build  virtfs-proxy-helper.c
stats/: meson.build  trace_stats.cc
trace_extra/: guest_context_tracker.cc  guest_context_tracker.hh  memory_interceptor.cc  memory_interceptor.hh  meson.build  qemu_perfetto.h  trace_counters.cc  trace_counters.hh  trace_perfetto.cc  trace_stats.cc  trace_stats.hh  track.hh  tuple_index.hh
trace_extra/proto/: meson.build  protobuf_backend_entry.proto
(+302 files in other folders)
