bsd_user_ss.add(files(
  'bsd-mem.c',
  'bsd-proc.c',
  'bsdload.c',
  'elfload.c',
  'main.c',
  'mmap.c',
  'signal.c',
  'strace.c',
  'syscall.c',
  'uaccess.c',
  abi / 'target_arch_cpu.c',
  targetos / 'os-time.c',
  targetos / 'os-proc.c',
  targetos / 'os-stat.c',
  targetos / 'os-sys.c',
))
