bsd_user_ss.add(files(
  'bsd-ioctl.c',
  'bsd-mem.c',
  'bsd-socket.c',
  'bsd-proc.c',
  'bsdload.c',
  'elfload.c',
  'main.c',
  'mmap.c',
  'signal.c',
  'strace.c',
  'syscall.c',
  'uaccess.c',
  abi / 'target_arch_cpu.c',
  targetos / 'os-time.c',
  targetos / 'os-proc.c',
  targetos / 'os-socket.c',
  targetos / 'os-stat.c',
  targetos / 'os-sys.c',
  targetos / 'os-thread.c',
))
