bsd_user_ss.add(files(
  'bsd-ioctl.c',
  'bsd-mem.c',
  'bsd-misc.c',
  'bsd-socket.c',
  'bsd-proc.c',
  'bsdload.c',
  'elfload.c',
  'main.c',
  'mmap.c',
  'safe-syscall.S',
  'signal.c',
  'strace.c',
  'syscall.c',
  'uaccess.c',
  abi / 'target_arch_cpu.c',
  targetos / 'os-extattr.c',
  targetos / 'os-kbounce.c',
  targetos / 'os-proc.c',
  targetos / 'os-socket.c',
  targetos / 'os-stat.c',
  targetos / 'os-sys.c',
  targetos / 'os-thread.c',
  targetos / 'os-time.c',
))

bsd_user_ss.add(when: 'TARGET_CHERI', if_true: files(
  'cheri/cheri_exec.c',
  'cheri/cheri_usercap.c',
  'cheri/cheric.c',
  abi / 'cheri/cheri_machdep.c',
))
